Remove typewriter, create minimalistic video editing background, fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,3 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
-
-/* Hide scrollbar completely */
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
-}
-
-/* For Firefox */
-html {
-  scrollbar-width: none;
-}
